--- a/pages/activity/list/list.wxml
+++ b/pages/activity/list/list.wxml
@@ -1,4 +1,7 @@
 <!--pages/activity/list/list.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container activity-page">
   <view class="activity-hero card">
     <view class="hero-header">
