--- a/pages/article/form/form.wxml
+++ b/pages/article/form/form.wxml
@@ -1,3 +1,6 @@
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container">
   <view class="form-group">
     <view class="label">文章标题</view>
