--- a/pages/chat/list/list.wxml
+++ b/pages/chat/list/list.wxml
@@ -1,4 +1,7 @@
 <!--pages/chat/list/list.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="chat-page">
   <!-- 菜单栏 -->
   <view class="menu-bar">
