--- a/pages/coupon/list/list.wxml
+++ b/pages/coupon/list/list.wxml
@@ -1,4 +1,7 @@
 <!--pages/coupon/list/list.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container">
   <!-- 选项卡 -->
   <view class="tabs">
