--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,7 @@
 <!--pages/index/index.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container">
   <!-- 顶部 Banner 区域 -->
   <view class="header-banner">
