--- a/pages/school/detail/detail.wxml
+++ b/pages/school/detail/detail.wxml
@@ -1,4 +1,7 @@
 <!--pages/school/detail/detail.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container">
   <view wx:if="{{loading}}" class="loading-wrap">
     <view class="loading">加载中...</view>
