--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,4 +1,7 @@
 <!--pages/search/search.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container">
   <!-- 搜索框 -->
   <view class="search-bar">
