--- a/pages/shop/list/list.wxml
+++ b/pages/shop/list/list.wxml
@@ -1,4 +1,7 @@
 <!--pages/shop/list/list.wxml-->
+<!-- 消息通知组件 -->
+<message-notification />
+
 <view class="container shop-page">
   <view class="shop-hero card">
     <view class="hero-header">
