--- a/pages/article/web-view/web-view.wxml
+++ b/pages/article/web-view/web-view.wxml
@@ -1,6 +1,18 @@
 <!--pages/article/web-view/web-view.wxml-->
 <view class="web-view-container">
-  <web-view src="{{url}}"></web-view>
+  <!-- web-view区域 -->
+  <web-view 
+    src="{{url}}"
+    binderror="onWebViewError"
+    bindload="onWebViewLoad"
+  ></web-view>
+  
+  <!-- 加载状态 -->
+  <view wx:if="{{loading}}" class="loading">
+    <view class="loading-content">
+      <text class="loading-text">文章加载中...</text>
+    </view>
+  </view>
 </view>
 
 
